# EnvimetReader

./: .gitignore  CMakeLists.txt  EnvimetReader.cxx  EnvimetReader.h  EnvimetReader.xml  EnvimetReaderGUI.xml  EnvimetV4XmlReader.cxx  EnvimetV4XmlReader.h  Jenkinsfile  LICENSE  README.md  plugin.cmake
lib/: CMakeLists.txt  EnvimetV4XmlParser.cxx  EnvimetV4XmlParser.h  Helper.cxx  Helper.h
tests/: CMakeLists.txt  EnvimetV4XmlParserTests.cxx  NewSimulationGebaeude1_AT_08.00.01 23.06.2015.EDX
tests/gtest/: CMakeLists.txt
